--- a/src/q_learning.ipynb
+++ b/src/q_learning.ipynb
@@ -502,18 +502,18 @@
      "shell.execute_reply.started": "2022-06-28T13:18:23.965341Z",
      "shell.execute_reply": "2022-06-28T13:19:46.577753Z"
     },
-    "trusted": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "trusted": true
    },
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 13000\n"
+      "Episode: 100000\n",
+      "Training finished.\n",
+      "\n",
+      "Wall time: 1min 6s\n"
      ]
     }
    ]
@@ -529,13 +529,26 @@
      "shell.execute_reply.started": "2022-06-28T13:19:46.581329Z",
      "shell.execute_reply": "2022-06-28T13:19:46.586886Z"
     },
-    "trusted": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "trusted": true
    },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :G|\n",
+      "| : | : : |\n",
+      "| : : : : |\n",
+      "| | : | : |\n",
+      "|\u001B[35m\u001B[34;1m\u001B[43mY\u001B[0m\u001B[0m\u001B[0m| : |B: |\n",
+      "+---------+\n",
+      "  (Dropoff)\n",
+      "Best action: West\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
@@ -548,13 +561,19 @@
      "shell.execute_reply.started": "2022-06-28T13:19:46.589412Z",
      "shell.execute_reply": "2022-06-28T13:19:46.619310Z"
     },
-    "trusted": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "trusted": true
    },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timesteps taken: 180\n",
+      "Penalties incurred: 0\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
@@ -573,7 +592,27 @@
     }
    },
    "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :G|\n",
+      "| : | : : |\n",
+      "| : : : : |\n",
+      "| | : | : |\n",
+      "|\u001B[35m\u001B[34;1m\u001B[43mY\u001B[0m\u001B[0m\u001B[0m| : |B: |\n",
+      "+---------+\n",
+      "  (South)\n",
+      "\n",
+      "Timestep: 4\n",
+      "State: 410\n",
+      "Action: 0\n",
+      "Reward: -1\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "markdown",
