--- a/src/q_learning.ipynb
+++ b/src/q_learning.ipynb
@@ -120,11 +120,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|R: | : :\u001B[34;1mG\u001B[0m|\n",
+      "|\u001B[35mR\u001B[0m: | : :G|\n",
       "| : | : : |\n",
       "| : : : : |\n",
-      "| | :\u001B[43m \u001B[0m| : |\n",
-      "|\u001B[35mY\u001B[0m| : |B: |\n",
+      "| | : | : |\n",
+      "|\u001B[34;1m\u001B[43mY\u001B[0m\u001B[0m| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -390,7 +390,20 @@
   },
   {
    "cell_type": "code",
-   "source": "# Loading state\n# (taxi row, taxi column, passenger index, destination index)\n# Blue letter indicates pickup location\n# Pink Letter indicates dropoff location\nstate = env.encode(4, 4, passenger['Y'], dest['R']) \nenv.s = state\n\n# Uncomment next line to load random state\n# env.reset()\nstate = env.s\nprint(\"State:\", state)\nenv.render()",
+   "source": [
+    "# Loading state\n",
+    "# (taxi row, taxi column, passenger index, destination index)\n",
+    "# Blue letter indicates pickup location\n",
+    "# Pink Letter indicates dropoff location\n",
+    "state = env.encode(4, 4, passenger['Y'], dest['R']) \n",
+    "env.s = state\n",
+    "\n",
+    "# Uncomment next line to load random state\n",
+    "# env.reset()\n",
+    "state = env.s\n",
+    "print(\"State:\", state)\n",
+    "env.render()"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:16:28.883742Z",
@@ -409,11 +422,11 @@
      "text": [
       "State: 488\n",
       "+---------+\n",
-      "|R: | : :\u001B[34;1mG\u001B[0m|\n",
+      "|\u001B[35mR\u001B[0m: | : :G|\n",
       "| : | : : |\n",
       "| : : : : |\n",
-      "| | :\u001B[43m \u001B[0m| : |\n",
-      "|\u001B[35mY\u001B[0m| : |B: |\n",
+      "| | : | : |\n",
+      "|\u001B[34;1m\u001B[43mY\u001B[0m\u001B[0m| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -422,12 +435,18 @@
   },
   {
    "cell_type": "markdown",
-   "source": "## Brute Force",
+   "source": [
+    "## Brute Force"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "source": "frames, epochs, penalties = brute_force(state)\nprint(\"Timesteps taken: {}\".format(epochs))\nprint(\"Penalties incurred: {}\".format(penalties))",
+   "source": [
+    "frames, epochs, penalties = brute_force(state)\n",
+    "print(\"Timesteps taken: {}\".format(epochs))\n",
+    "print(\"Penalties incurred: {}\".format(penalties))"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:16:39.034597Z",
@@ -445,14 +464,17 @@
      "output_type": "stream",
      "text": [
       "Timesteps taken: 200\n",
-      "Penalties incurred: 71\n"
+      "Penalties incurred: 60\n"
      ]
     }
    ]
   },
   {
    "cell_type": "code",
-   "source": "# Visualise agent\nprint_frames(frames, time_btw_frames=0.03)",
+   "source": [
+    "# Visualise agent\n",
+    "print_frames(frames, time_btw_frames=0.03)"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:17:20.943985Z",
@@ -470,30 +492,36 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|R: | : :\u001B[34;1mG\u001B[0m|\n",
+      "|\u001B[35mR\u001B[0m: | : :G|\n",
       "| : | : : |\n",
-      "| : : : : |\n",
-      "| | : |\u001B[43m \u001B[0m: |\n",
-      "|\u001B[35mY\u001B[0m| : |B: |\n",
+      "|\u001B[43m \u001B[0m: : : : |\n",
+      "| | : | : |\n",
+      "|\u001B[34;1mY\u001B[0m| : |B: |\n",
       "+---------+\n",
-      "  (Dropoff)\n",
+      "  (South)\n",
       "\n",
       "Timestep: 200\n",
-      "State: 366\n",
-      "Action: 5\n",
-      "Reward: -10\n"
+      "State: 208\n",
+      "Action: 0\n",
+      "Reward: -1\n"
      ]
     }
    ]
   },
   {
    "cell_type": "markdown",
-   "source": "## RL ",
+   "source": [
+    "## RL "
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "source": "%%time\n# Train Agent on 100000 episodes\nq_table = train_agent()",
+   "source": [
+    "%%time\n",
+    "# Train Agent on 100000 episodes\n",
+    "q_table = train_agent()"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:18:23.964945Z",
@@ -513,14 +541,20 @@
       "Episode: 100000\n",
       "Training finished.\n",
       "\n",
-      "Wall time: 1min 6s\n"
+      "CPU times: total: 1min 19s\n",
+      "Wall time: 1min 18s\n"
      ]
     }
    ]
   },
   {
    "cell_type": "code",
-   "source": "# Printing the best action for our initial state\nenv.s = state\nenv.render()\nprint(\"Best action: {}\".format(actions[np.argmax(q_table[state])]))",
+   "source": [
+    "# Printing the best action for our initial state\n",
+    "env.s = state\n",
+    "env.render()\n",
+    "print(\"Best action: {}\".format(actions[np.argmax(q_table[state])]))"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:19:46.580855Z",
@@ -552,7 +586,12 @@
   },
   {
    "cell_type": "code",
-   "source": "# Running agent trained using Reinforcement Learning\nframes, epochs, penalties = run_agent(state, q_table)\nprint(\"Timesteps taken: {}\".format(epochs))\nprint(\"Penalties incurred: {}\".format(penalties))",
+   "source": [
+    "# Running agent trained using Reinforcement Learning\n",
+    "frames, epochs, penalties = run_agent(state, q_table)\n",
+    "print(\"Timesteps taken: {}\".format(epochs))\n",
+    "print(\"Penalties incurred: {}\".format(penalties))"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:19:46.589083Z",
@@ -569,7 +608,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Timesteps taken: 180\n",
+      "Timesteps taken: 187\n",
       "Penalties incurred: 0\n"
      ]
     }
@@ -577,7 +616,9 @@
   },
   {
    "cell_type": "code",
-   "source": "print_frames(frames,time_btw_frames=0.5)",
+   "source": [
+    "print_frames(frames,time_btw_frames=0.5)"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:19:46.621634Z",
@@ -586,12 +627,9 @@
      "shell.execute_reply.started": "2022-06-28T13:19:46.622443Z",
      "shell.execute_reply": "2022-06-28T13:21:19.427192Z"
     },
-    "trusted": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "trusted": true
    },
-   "execution_count": null,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -606,7 +644,7 @@
       "+---------+\n",
       "  (South)\n",
       "\n",
-      "Timestep: 4\n",
+      "Timestep: 187\n",
       "State: 410\n",
       "Action: 0\n",
       "Reward: -1\n"
@@ -616,12 +654,39 @@
   },
   {
    "cell_type": "markdown",
-   "source": "# Comparison",
+   "source": [
+    "# Comparison"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "source": "%%time\nepisodes = 100\nbrute_steps = 0\nbrute_penalties = 0\nreinf_steps = 0\nreinf_penalties = 0\n\nfor _ in range(episodes):\n    env.reset()\n    state = env.s\n    \n    frames, steps, penalties = brute_force(state)\n    brute_steps += steps\n    brute_penalties += penalties\n    \n    frames, steps, penalties = run_agent(state, q_table)\n    reinf_steps += steps\n    reinf_penalties += penalties\n    \nprint('Result after {} episodes'.format(episodes))\nprint('Average Brute-Force timestamps per episode           : {}'.format(brute_steps/episodes))\nprint('Average Brute-Force penalties per episode            : {}'.format(brute_penalties/episodes))\nprint('Average Reinforcement Learning timestamps per episode: {}'.format(reinf_steps/episodes))\nprint('Average Reinforcement Learning penalties per episode : {}'.format(reinf_penalties/episodes))",
+   "source": [
+    "%%time\n",
+    "episodes = 100\n",
+    "brute_steps = 0\n",
+    "brute_penalties = 0\n",
+    "reinf_steps = 0\n",
+    "reinf_penalties = 0\n",
+    "\n",
+    "for _ in range(episodes):\n",
+    "    env.reset()\n",
+    "    state = env.s\n",
+    "    \n",
+    "    frames, steps, penalties = brute_force(state)\n",
+    "    brute_steps += steps\n",
+    "    brute_penalties += penalties\n",
+    "    \n",
+    "    frames, steps, penalties = run_agent(state, q_table)\n",
+    "    reinf_steps += steps\n",
+    "    reinf_penalties += penalties\n",
+    "    \n",
+    "print('Result after {} episodes'.format(episodes))\n",
+    "print('Average Brute-Force timestamps per episode           : {}'.format(brute_steps/episodes))\n",
+    "print('Average Brute-Force penalties per episode            : {}'.format(brute_penalties/episodes))\n",
+    "print('Average Reinforcement Learning timestamps per episode: {}'.format(reinf_steps/episodes))\n",
+    "print('Average Reinforcement Learning penalties per episode : {}'.format(reinf_penalties/episodes))"
+   ],
    "metadata": {
     "execution": {
      "iopub.status.busy": "2022-06-28T13:21:19.428951Z",
@@ -630,24 +695,43 @@
      "shell.execute_reply.started": "2022-06-28T13:21:19.429261Z",
      "shell.execute_reply": "2022-06-28T13:21:20.739050Z"
     },
-    "trusted": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "trusted": true
    },
-   "execution_count": null,
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result after 100 episodes\n",
+      "Average Brute-Force timestamps per episode           : 194.56\n",
+      "Average Brute-Force penalties per episode            : 64.3\n",
+      "Average Reinforcement Learning timestamps per episode: 6.37\n",
+      "Average Reinforcement Learning penalties per episode : 0.0\n",
+      "CPU times: total: 1.42 s\n",
+      "Wall time: 1.41 s\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [],
+   "metadata": {},
+   "execution_count": 18,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
    "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ]
 }
